--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -36,7 +36,7 @@
 
 
 /*=====================================IMPORT PARTS=====================================*/
-@import './parts/header';
-@import './parts/main';
-@import './parts/footer';
+@import './componentss/header';
+@import './componentss/main';
+@import './componentss/footer';
 /*======================================================================================*/
