--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -11,8 +11,12 @@
 @import './modules/global';
 /*======================================================================================*/
 
+/*=======================================REWRITING======================================*/
 
-/*======================================DUBLICATES======================================*/
+/*======================================================================================*/
+
+
+/*====================================HTML COMPONENTS===================================*/
 %title{
     font-family: serif;
     font-size: 30px;
@@ -35,8 +39,12 @@
 /*======================================================================================*/
 
 
-/*=====================================IMPORT PARTS=====================================*/
-@import './componentss/header';
-@import './componentss/main';
-@import './componentss/footer';
+/*==================================IMPORT COMPONENTS===================================*/
+@import './components/header';
+@import './components/main';
+@import './components/footer';
+/*======================================================================================*/
+
+/*=======================================BOOTSTRAP======================================*/
+@import '../../node_modules/bootstrap/scss/bootstrap.scss';
 /*======================================================================================*/
