--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -6,13 +6,9 @@
 
 
 /*====================================IMPORT MODULES====================================*/
-@import './modules/fonts';
+@import './fonts';
 @import './modules/vars';
 @import './modules/global';
-/*======================================================================================*/
-
-/*=======================================REWRITING======================================*/
-
 /*======================================================================================*/
 
 
@@ -25,10 +21,9 @@
 }
 
 %text{
-    font-family: serif;
-    font-size: 14px;
+    font-family: 'Noto Sans';
+    font-size: 17px;
     font-weight: 400;
-    color: #000;
 }
 
 %buttons{
@@ -37,6 +32,12 @@
     font-weight: 400;
 }
 /*======================================================================================*/
+
+
+/*=======================================REWRITING======================================*/
+@import './modules/bootstrapCustom';
+/*======================================================================================*/
+
 
 
 /*==================================IMPORT COMPONENTS===================================*/
