--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,4 +1,4 @@
-/*======================================NOTO SANS======================================*/
+/*======================================FONT FACE======================================*/
 @font-face{
     font-family: 'Noto Sans';
     src: 
@@ -11,5 +11,20 @@
     src: 
         url('../fonts/NotoSans-Bold.ttf') format('truetype');
     font-weight: 600;
+}
+
+@font-face{
+    font-family: 'BBS Reith Sans';
+    src: 
+        url('../fonts/BBCReithSans_W_Bd.woff') format('woff');
+    font-weight: 700;
+}
+
+
+@font-face{
+    font-family: 'BBS Reith Sans';
+    src: 
+        url('../fonts/BBCReithSans_W_Md.woff') format('woff');
+    font-weight: 500;
 }
 /*======================================================================================*/
