--- a/app/scss/components/_main.scss
+++ b/app/scss/components/_main.scss
@@ -1,5 +1,62 @@
+@import '../modules/bootstrapCustom';
 /*=====================================TOP SECTION======================================*/
+.top{
+    position: relative;
+    padding-top: 65px;
 
+    &__content{
+
+        &-title{
+            @extend %title;
+            font-size: 48px;
+            color: $blue-light;
+        }
+
+        &-title.half{
+            font-size: 20px;
+        }
+
+        &-desc{
+            @extend %text;
+            font-weight: 600;
+            line-height: 32px;
+            max-width: 500px;
+            margin-top: 50px;
+        }
+
+        &-desc.second-desc{
+            font-weight: 400;
+            line-height: 32px;
+            max-width: 477px;
+            margin-top: 23px;
+
+            span{
+                font-weight: 700;
+            }
+        }
+        
+        &-img.half-img{
+            margin-left: 40px;
+        }
+
+        &-paragraph{
+            &:nth-child(1) {
+                padding-bottom: 45px;
+            }
+        }
+    }
+
+    &__content-block.second-block{
+        max-width: 477px;
+    }
+}
+
+.line{
+    height: 7px;
+    width: 227px;
+    background-color: $gray-200;
+    margin-top: 52px;
+}
 /*======================================================================================*/
 
 
