--- a/app/scss/modules/_bootstrapCustom.scss
+++ b/app/scss/modules/_bootstrapCustom.scss
@@ -46,4 +46,11 @@ $container-max-widths: (
 // Navbar
 $navbar-padding-y: 0.125rem;
 $nav-link-padding-y: 0.25rem;
+
+
+// Shadows
+$box-shadow:                  0 .5rem 1rem rgba($black, .15) !default;
+$box-shadow-sm:               0 -0.063rem 0.625rem rgba($black, .1);
+$box-shadow-lg:               0 1rem 3rem rgba($black, .175) !default;
+$box-shadow-inset:            inset 0 1px 2px rgba($black, .075) !default;
 /*======================================================================================*/
