--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -14,10 +14,9 @@
 
 /*====================================HTML COMPONENTS===================================*/
 %title{
-    font-family: serif;
-    font-size: 30px;
-    font-weight: 400;
-    color: #000;
+    font-family: 'BBS Reith Sans';
+    font-size: 20px;
+    font-weight: 700;
 }
 
 %text{
