--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -30,6 +30,10 @@
     color: #FFFFFF;
     font-weight: 400;
 }
+
+body{
+    overflow-x: hidden;
+}
 /*======================================================================================*/
 
 
