--- a/app/scss/modules/_bootstrapCustom.scss
+++ b/app/scss/modules/_bootstrapCustom.scss
@@ -53,4 +53,8 @@ $box-shadow:                  0 .5rem 1rem rgba($black, .15) !default;
 $box-shadow-sm:               0 -0.063rem 0.625rem rgba($black, .1);
 $box-shadow-lg:               0 1rem 3rem rgba($black, .175) !default;
 $box-shadow-inset:            inset 0 1px 2px rgba($black, .075) !default;
+
+// Alert
+$alert-border-radius:           16px;
+$alert-padding-x:               24px;
 /*======================================================================================*/
