--- a/app/scss/modules/_bootstrapCustom.scss
+++ b/app/scss/modules/_bootstrapCustom.scss
@@ -57,4 +57,17 @@ $box-shadow-inset:            inset 0 1px 2px rgba($black, .075) !default;
 // Alert
 $alert-border-radius:           16px;
 $alert-padding-x:               24px;
+
+
+// Buttons
+$btn-border-radius:           8px;
+$btn-padding-y:               19px;
+$btn-padding-x:               42px;
+
+
+// Carousel
+$carousel-indicator-width:           12px;
+$carousel-indicator-height:          12px;
+$carousel-indicator-opacity:         0.35;
+$carousel-indicator-active-bg:       #004FC7;
 /*======================================================================================*/
