--- a/app/scss/modules/_bootstrapCustom.scss
+++ b/app/scss/modules/_bootstrapCustom.scss
@@ -23,7 +23,8 @@ $black:    #020303;
 // Defaults
 $primary:       $white;
 $secondary:     $gray-100;
-
+$info:          #004FC7;
+// $gradient: linear-gradient(180deg, #0C5CD6 0%, rgba(0, 56, 140, 0) 100%), #004FC7;
 
 // Container
 $grid-breakpoints: (
