--- a/app/scss/components/_main.scss
+++ b/app/scss/components/_main.scss
@@ -318,7 +318,7 @@
 
     &__subtitle{
         @extend %title;
-        font-weight: 700;
+        font-weight: 500;
         font-size: 28px;
         line-height: 40px;
         letter-spacing: 2.42px;
@@ -342,5 +342,82 @@
         padding: 4px !important;
     }
 
+}
+/*======================================================================================*/
+
+/*========================================TERMIN========================================*/
+.termin{
+
+    &__line{
+        height: 2px;
+        background: #EEF0F4;
+    }
+
+    &__row{
+        padding-top: 73px;
+        padding-bottom: 77px;
+    }
+
+    &__title{
+        @extend %title;
+        font-size: 34px;
+        line-height: 43px;
+        letter-spacing: -0.4px;
+        color: $blue-light;
+        padding-top: 73px;
+    }
+
+    &__info{
+        max-width: 420px;
+
+        &-paragraph{
+            @extend %text;
+            letter-spacing: -0.4px;
+            line-height: 32px;
+
+            &:nth-child(1) {
+                padding-bottom: 32px;
+            }
+
+            &:nth-child(2) {
+                padding-bottom: 30px;
+            }
+
+            &_link{
+               font-weight: 600;
+               text-decoration: none; 
+               color: $blue-thin;
+
+                &:hover{
+                    color: $blue-thin;
+                    opacity: .7;
+                }
+            }
+        }
+
+        &-btn{
+            position: relative;
+            @extend %title;
+            font-weight: 500;
+            color: $white !important;
+            font-size: 18px;
+            line-height: 26px;
+            width: 306px;
+            border-color: $white !important;
+            box-shadow: 0px 1px 4px rgba(48, 67, 133, 0.5);
+            border-radius: 12px !important;
+
+            &_image{
+                position: absolute;
+                top: 50%;
+                left: 0;
+                transform: translateY(-50%);
+            }
+        }
+    }
+
+    &__logo{
+        margin-top: 73px;
+    }
 }
 /*======================================================================================*/
