--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -39,6 +39,7 @@ body{
 
 /*=======================================REWRITING======================================*/
 @import './modules/bootstrapCustom';
+$navbar-light-toggler-icon-bg:      url('../images/burger.svg');
 /*======================================================================================*/
 
 
