--- a/app/scss/components/_footer.scss
+++ b/app/scss/components/_footer.scss
@@ -1,4 +1,5 @@
 @import '../modules/bootstrapCustom';
+@import '../../../node_modules/bootstrap/scss/mixins';
 /*=========================================MAIN=========================================*/
 .footer{
     padding: 50px 0;
