--- a/app/scss/components/_main.scss
+++ b/app/scss/components/_main.scss
@@ -390,8 +390,20 @@
     padding-top: 75px;
     padding-bottom: 57px;
 
+    @include media-breakpoint-down(md) {
+        padding-top: 27px;
+    }
+
     &__column{
         padding: 4px !important;
+
+        @include media-breakpoint-down(lg) {
+            width: 50% !important;
+        }
+
+        @include media-breakpoint-down(md){
+            width: 100% !important;
+        }   
     }
 
     &__title{
@@ -401,12 +413,22 @@
         line-height: 40px;
         letter-spacing: 4.42px;
         padding-bottom: 38px;
+
+        @include media-breakpoint-down(lg) {
+            text-align: center;
+        }
+
+        @include media-breakpoint-down(md) {
+            font-size: 20px;
+            padding-bottom: 17px;
+        }
     }
 
     &__item{
         height: 136px;
         margin-bottom: 0 !important;
         box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.15);
+        text-align: center;
 
         &-info{
             @extend %text;
@@ -415,11 +437,30 @@
             color: $gray-700;
             max-width: 248px;
             margin: 0;
+            text-align: left;
+
+            @include media-breakpoint-down(lg) {
+                font-size: 18px;
+                letter-spacing: -0.4px;
+            }
+
+            @include media-breakpoint-down(md){
+                max-width: 500px;
+            }   
         }
 
-        &-image{
-            margin-left: 15px;
-            margin-right: 24px;
+    }
+
+    &__image{
+        display: flex;
+        margin-right: 24px;
+        align-items: center;
+        padding-left: 15px;
+        height: 56px;
+        width: 70px;
+
+        img{
+            max-width: unset;
         }
     }
 }
@@ -444,6 +485,7 @@
             letter-spacing: 4.42px;
             text-transform: uppercase;
             padding-bottom: 62px;
+
         }
 
         &-number{
