--- a/app/scss/components/_main.scss
+++ b/app/scss/components/_main.scss
@@ -567,6 +567,10 @@
     padding-top: 74px;
     padding-bottom: 74px;
 
+    @include media-breakpoint-down(md) {
+        padding-top: 32px;
+    }
+
     &__title{
         @extend %title;
         font-weight: 500;
@@ -575,12 +579,26 @@
         letter-spacing: 4.42px;
         text-transform: uppercase;
         padding-bottom: 35px;
+
+        @include media-breakpoint-down(lg) {
+            text-align: center;
+        }
+
+        @include media-breakpoint-down(md) {
+            font-size: 20px;
+            padding-bottom: 18px;
+        }
     }
 
     // Carousel
     &__item{
         img{
             margin: 0 auto;
+
+            @include media-breakpoint-down(md) {
+                width: 500px;
+                padding: 0 5px;
+            }
         }
     }
 
@@ -589,10 +607,20 @@
         width: 610px;
         margin: 0 auto;
         position: relative;
+
+        @include media-breakpoint-down(sm) {
+            width: 300px;
+            padding: 0 5px;
+            margin: 0 auto;
+        }
     }
 
     &__btn{
         box-shadow: 0px 0px 21px rgba(64, 68, 75, 0.14);
+
+        @include media-breakpoint-down(sm) {
+            display: none !important;
+        }
     }
 
     &__btn + .bilder__btn{
@@ -602,6 +630,14 @@
     &__indicators{
         top: 0;
         left: 20% !important;
+
+        @include media-breakpoint-down(sm) {
+            position: relative !important;
+            margin-right: 0 !important;
+            margin-left: 0 !important;
+            left: 0 !important;
+            max-width: 300px;
+        }
     }
 
     &__dots{
@@ -627,6 +663,21 @@
         color: $black;
         margin-top: 78px !important;
         padding-bottom: 35px;
+
+        @include media-breakpoint-down(lg) {
+            text-align: center;
+            margin-top: 35px !important;
+        }
+
+        @include media-breakpoint-down(md) {
+            font-size: 20px;
+            padding-bottom: 18px;
+        }
+
+        @include media-breakpoint-down(sm) {
+            max-width: 320px !important;
+            margin: 0 auto;
+        }
     }
 
     &__alert{
@@ -638,10 +689,19 @@
         font-size: 17px;
         letter-spacing: 1.42px;
         text-transform: uppercase;
+        
+        @include media-breakpoint-down(lg) {
+            font-size: 16px;
+            text-align: center;
+        }
     }
 
     &__column{
         padding: 4px !important;
+
+        @include media-breakpoint-down(lg) {
+            width: 100% !important;
+        }
     }
 
 }
