--- a/app/scss/components/_footer.scss
+++ b/app/scss/components/_footer.scss
@@ -6,6 +6,17 @@
 
     &__item {
 
+        @include media-breakpoint-down(xl){
+            display: flex;
+            flex-direction: column;
+            width: 50% !important;
+            justify-content: center !important;
+        }
+
+        @include media-breakpoint-down(sm){
+            width: 100% !important;
+        }
+
         &-title{
             @extend %text;
             font-weight: 700;
@@ -13,6 +24,10 @@
             line-height: 32px;
             letter-spacing: -0.4px;
             padding-bottom: 10px;
+
+            @include media-breakpoint-down(xl){
+                padding-bottom: 0;
+            }
         }
 
         &-info{
@@ -20,6 +35,7 @@
             line-height: 20px;
             letter-spacing: -0.4px;
             color: #9EABBB;
+            text-align: left;
 
             &_tel{
                 @extend %text;
@@ -38,6 +54,18 @@
                 color: #9EABBB;
             }
         }
+    }
+}
+
+.flex-wrapp{
+    @include media-breakpoint-down(xl){
+        width: 262px;
+        margin: 0 auto;
+        padding-bottom: 15px;
+    }
+
+    @include media-breakpoint-down(sm){
+        width: 305px;
     }
 }
 /*======================================================================================*/
