--- a/app/scss/components/_main.scss
+++ b/app/scss/components/_main.scss
@@ -721,6 +721,7 @@
 
         @include media-breakpoint-down(lg){
             padding-top: 48px;
+            padding-bottom: 10px;
         }
 
         @include media-breakpoint-down(lg){
